#11 리사이클러뷰 kotlin 샘플 추가 TODO Java 추가필요 TODO 코틀린 일부 오류 해결 필요

--- a/app-kotlin/src/main/res/layout/fragment_image_sample.xml
+++ b/app-kotlin/src/main/res/layout/fragment_image_sample.xml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="LinearLayoutManager"
-        tools:listitem="@layout/item_image_view" />
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Item add" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_one"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/btn_add"
+            app:layoutManager="LinearLayoutManager"
+            tools:listitem="@layout/item_text_view" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/btn_delete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Item delete" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_two"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/btn_delete"
+            app:layoutManager="LinearLayoutManager"
+            tools:listitem="@layout/item_text_view" />
+    </RelativeLayout>
+</LinearLayout>
