--- a/app-java/src/main/res/layout/item_image_view.xml
+++ b/app-java/src/main/res/layout/item_image_view.xml
@@ -12,7 +12,7 @@
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/sample"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@id/tv_title"
