--- a/app-kotlin/src/main/res/layout/activity_image_sample.xml
+++ b/app-kotlin/src/main/res/layout/activity_image_sample.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".view.image.ImageSampleActivity">
+    tools:context=".view.sample.SampleActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,13 +22,5 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_image_sample" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/plus" />
 
 </android.support.design.widget.CoordinatorLayout>
