--- a/app-kotlin/src/main/res/values/colors.xml
+++ b/app-kotlin/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="color_control_highlight">#90A4AE</color>
+    <color name="color_selected">#90A4AE</color>
 </resources>
