#11 리사이클러뷰 kotlin 샘플 추가 코틀른 예제 작성 완료

--- a/app-kotlin/src/main/res/layout/item_text_view.xml
+++ b/app-kotlin/src/main/res/layout/item_text_view.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
     tools:background="@drawable/item_ripple_effect">
 
     <TextView
