#11 리사이클러뷰 Java 샘플 추가 - Java 샘플 추가

--- a/app-java/src/main/res/layout/activity_sample.xml
+++ b/app-java/src/main/res/layout/activity_sample.xml
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_image_sample" />
+    <include layout="@layout/content_sample" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
