--- a/app-java/src/main/res/drawable/item_ripple_effect.xml
+++ b/app-java/src/main/res/drawable/item_ripple_effect.xml
@@ -3,6 +3,5 @@
 
     <item android:drawable="@color/color_selected" android:state_selected="true" />
     <item android:drawable="@color/color_control_highlight" android:state_pressed="true" />
-    <item android:drawable="@android:color/transparent" />
-
+    <item android:drawable="@android:color/white" />
 </selector>
