--- a/app-kotlin/src/main/res/menu/menu_main.xml
+++ b/app-kotlin/src/main/res/menu/menu_main.xml
@@ -2,9 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="tech.thdev.kotlin_udemy_sample.MainActivity">
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_add"
+        android:icon="@drawable/plus"
+        android:title="Photo add"
+        app:showAsAction="always" />
 </menu>
