--- a/app-kotlin/src/main/res/layout/content_image_sample.xml
+++ b/app-kotlin/src/main/res/layout/content_image_sample.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".view.image.ImageSampleActivity"
+    tools:context=".view.image.ImageActivity"
     tools:showIn="@layout/activity_image_sample">
 
     <!-- Fragment view -->
