--- a/app-kotlin/src/main/res/layout/activity_basic.xml
+++ b/app-kotlin/src/main/res/layout/activity_basic.xml
@@ -8,6 +8,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="LinearLayoutManager"/>
+        android:layout_height="match_parent" />
 </LinearLayout>
