--- a/app-kotlin/src/main/res/layout/item_image_thread_view.xml
+++ b/app-kotlin/src/main/res/layout/item_image_thread_view.xml
@@ -26,7 +26,7 @@
         android:layout_alignRight="@id/image"
         android:background="#AAff0000"
         android:padding="5dp"
-        android:text="Glide"
+        android:text="Thread"
         android:textColor="#fff"
         android:textSize="20sp" />
 </RelativeLayout>
