--- a/app-kotlin/src/main/res/layout/activity_detail_parcelable.xml
+++ b/app-kotlin/src/main/res/layout/activity_detail_parcelable.xml
@@ -16,13 +16,13 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <ImageView
                 android:id="@+id/user_image"
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
-                android:padding="5dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/sample_03" />
 
@@ -30,11 +30,14 @@
                 android:id="@+id/tv_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="?attr/actionBarSize"
+                android:ellipsize="end"
                 android:gravity="center_vertical"
+                android:lines="1"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text=""
-                android:textSize="20sp" />
+                android:textColor="#fff"
+                android:textSize="18sp" />
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
@@ -49,8 +52,8 @@
         android:id="@+id/rl_bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:behavior_hideable="false"
-        app:behavior_peekHeight="200dp"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="160dp"
         app:layout_behavior="@string/bottom_sheet_behavior">
 
         <TextView
@@ -58,15 +61,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#DD000000"
+            android:ellipsize="end"
             android:gravity="center_vertical"
-            android:minHeight="60dp"
+            android:lines="2"
+            android:minHeight="40dp"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="80dp"
             android:paddingTop="5dp"
-            android:text=""
+            android:text="title...title...title...title...title...title...title...title...title...title...title...title...title...title...title...title..."
             android:textColor="@android:color/white"
-            android:textSize="25sp" />
+            android:textSize="18sp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -84,31 +89,66 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp">
 
+                <ImageView
+                    android:id="@+id/img_date"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="4dp"
+                    android:src="@drawable/icon_clock" />
+
                 <TextView
                     android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="#78909C"
-                    android:textSize="13sp" />
-
-                <TextView
-                    android:id="@+id/tv_view_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/tv_date"
-                    android:text=""
-                    android:textColor="#757575"
-                    android:textSize="13sp" />
-
-                <TextView
-                    android:id="@+id/tv_comment_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/tv_view_count"
-                    android:text=""
+                    android:layout_toRightOf="@id/img_date"
+                    android:text="12345"
                     android:textColor="#fff"
-                    android:textSize="13sp" />
+                    android:textSize="12sp" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_toRightOf="@id/tv_date"
+                    android:gravity="right|center_vertical">
+
+                    <ImageView
+                        android:id="@+id/img_viewer"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_marginRight="4dp"
+                        android:src="@drawable/icon_viewer" />
+
+                    <TextView
+                        android:id="@+id/tv_viewer_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_toEndOf="@+id/img_viewer"
+                        android:layout_toRightOf="@+id/img_viewer"
+                        android:text="12345"
+                        android:textColor="#fff"
+                        android:textSize="12sp" />
+
+                    <ImageView
+                        android:id="@+id/img_comment"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="4dp"
+                        android:layout_toRightOf="@id/tv_viewer_count"
+                        android:src="@drawable/icon_comment" />
+
+                    <TextView
+                        android:id="@+id/tv_comment_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/img_comment"
+                        android:text="1222"
+                        android:textColor="#fff"
+                        android:textSize="12sp" />
+                </RelativeLayout>
             </RelativeLayout>
 
             <TextView
@@ -116,9 +156,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/rl_etc_view"
-                android:text=""
+                android:text="Content..."
                 android:textColor="#FFF"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
         </RelativeLayout>
     </RelativeLayout>
 
@@ -129,6 +169,6 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/rl_bottom_sheet"
         app:layout_anchorGravity="right"
-        app:srcCompat="@android:drawable/ic_dialog_info" />
+        app:srcCompat="@drawable/icon_info" />
 
 </android.support.design.widget.CoordinatorLayout>
