--- a/app-kotlin/src/main/res/layout/activity_detail_parcelable.xml
+++ b/app-kotlin/src/main/res/layout/activity_detail_parcelable.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="#000"
     android:fitsSystemWindows="true"
     tools:context=".view.detail.DetailActivity">
 
@@ -17,27 +17,64 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
-            <ImageView
-                android:id="@+id/user_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/sample_03" />
-
-            <TextView
-                android:id="@+id/tv_user_name"
+            <RelativeLayout
+                android:id="@+id/rl_toolbar_user_info"
                 android:layout_width="wrap_content"
-                android:layout_height="?attr/actionBarSize"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:lines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text=""
-                android:textColor="#fff"
-                android:textSize="18sp" />
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/img_buddy_icon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    android:scaleType="centerCrop" />
+
+                <TextView
+                    android:id="@+id/tv_buddy_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_toRightOf="@id/img_buddy_icon"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:lines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text=""
+                    android:textColor="#fff"
+                    android:textSize="18sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_toolbar_image_info"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/img_small"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/sample_03" />
+
+                <TextView
+                    android:id="@+id/tv_toolbar_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_toRightOf="@id/img_small"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:lines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text=""
+                    android:textColor="#fff"
+                    android:textSize="18sp" />
+            </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
@@ -45,129 +82,19 @@
         android:id="@+id/img_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:scaleType="fitCenter" />
 
-    <!-- Bottom sheet -->
-    <RelativeLayout
-        android:id="@+id/rl_bottom_sheet"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:behavior_hideable="true"
-        app:behavior_peekHeight="160dp"
-        app:layout_behavior="@string/bottom_sheet_behavior">
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#DD000000"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="2"
-            android:minHeight="40dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="80dp"
-            android:paddingTop="5dp"
-            android:text="title...title...title...title...title...title...title...title...title...title...title...title...title...title...title...title..."
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_title"
-            android:background="#BB000000"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp">
-
-            <RelativeLayout
-                android:id="@+id/rl_etc_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp">
-
-                <ImageView
-                    android:id="@+id/img_date"
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="4dp"
-                    android:src="@drawable/icon_clock" />
-
-                <TextView
-                    android:id="@+id/tv_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/img_date"
-                    android:text="12345"
-                    android:textColor="#fff"
-                    android:textSize="12sp" />
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_toRightOf="@id/tv_date"
-                    android:gravity="right|center_vertical">
-
-                    <ImageView
-                        android:id="@+id/img_viewer"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_marginRight="4dp"
-                        android:src="@drawable/icon_viewer" />
-
-                    <TextView
-                        android:id="@+id/tv_viewer_count"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_toEndOf="@+id/img_viewer"
-                        android:layout_toRightOf="@+id/img_viewer"
-                        android:text="12345"
-                        android:textColor="#fff"
-                        android:textSize="12sp" />
-
-                    <ImageView
-                        android:id="@+id/img_comment"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="4dp"
-                        android:layout_toRightOf="@id/tv_viewer_count"
-                        android:src="@drawable/icon_comment" />
-
-                    <TextView
-                        android:id="@+id/tv_comment_count"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toRightOf="@id/img_comment"
-                        android:text="1222"
-                        android:textColor="#fff"
-                        android:textSize="12sp" />
-                </RelativeLayout>
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/tv_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/rl_etc_view"
-                android:text="Content..."
-                android:textColor="#FFF"
-                android:textSize="14sp" />
-        </RelativeLayout>
-    </RelativeLayout>
+    <include
+        android:id="@+id/rl_sheet_view"
+        layout="@layout/bottom_sheet_detail_view" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/rl_bottom_sheet"
+        app:layout_anchor="@id/rl_sheet_view"
         app:layout_anchorGravity="right"
         app:srcCompat="@drawable/icon_info" />
 
