--- a/app-kotlin/src/main/res/values/colors.xml
+++ b/app-kotlin/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#78909C</color>
+    <color name="colorPrimaryDark">#37474F</color>
+    <color name="colorAccent">#FFB300</color>
 
-    <color name="color_ffb300">#FFB300</color>
+    <color name="black">#000</color>
 
     <color name="transparent_black_40">#66000000</color>
 </resources>
