--- a/app-kotlin/src/main/res/layout/activity_detail_more.xml
+++ b/app-kotlin/src/main/res/layout/activity_detail_more.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:fitsSystemWindows="true"
-    tools:context="tech.thdev.kotlin_udemy_sample.view.detail_more.DetailMoreActivity">
+    tools:context="tech.thdev.kotlin_udemy_sample.view.detail.DetailMoreActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
