--- a/app-kotlin/src/main/res/layout/bottom_sheet_detail_view.xml
+++ b/app-kotlin/src/main/res/layout/bottom_sheet_detail_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DD222222"
     app:behavior_hideable="true"
     app:behavior_peekHeight="160dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
