--- a/app-kotlin/src/main/res/menu/menu_main.xml
+++ b/app-kotlin/src/main/res/menu/menu_main.xml
@@ -45,6 +45,11 @@
                     android:id="@+id/action_single"
                     android:orderInCategory="2"
                     android:title="Single item" />
+
+                <item
+                    android:id="@+id/action_extra"
+                    android:orderInCategory="3"
+                    android:title="Single extra" />
             </group>
         </menu>
     </item>
