--- a/app-kotlin/src/main/res/layout/activity_detail_photo_id.xml
+++ b/app-kotlin/src/main/res/layout/activity_detail_photo_id.xml
@@ -24,7 +24,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <TextView
             android:id="@+id/tv_title"
@@ -37,7 +38,7 @@
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="adfadfadfadfadfadfadfadfadfadfadfadfadfadfadfadfadfadfadfadfadf"
+            android:text=""
             android:textColor="@android:color/white"
             android:textSize="14sp" />
 
