--- a/app-kotlin/src/main/res/layout/activity_detail_photo_id.xml
+++ b/app-kotlin/src/main/res/layout/activity_detail_photo_id.xml
@@ -21,32 +21,10 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
     </android.support.design.widget.AppBarLayout>
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/img_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            android:minHeight="40dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text=""
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
-
-        <ImageView
-            android:id="@+id/img_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/tv_title"
-            android:scaleType="fitCenter" />
-    </RelativeLayout>
+        android:scaleType="fitCenter"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 </android.support.design.widget.CoordinatorLayout>
