--- a/app-kotlin/src/main/res/layout/view_blur.xml
+++ b/app-kotlin/src/main/res/layout/view_blur.xml
@@ -6,27 +6,29 @@
     android:fitsSystemWindows="true">
 
     <RelativeLayout
-        android:id="@+id/rl_view"
+        android:id="@+id/rl_blur_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <RelativeLayout
+            android:id="@+id/rl_item_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_margin="60dp"
-            android:padding="20dp">
+            android:padding="20dp"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/img_blur_over_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
                 android:layout_centerInParent="true"
                 android:background="@drawable/sample_02"
                 android:minHeight="300dp"
                 android:minWidth="200dp"
-                android:scaleType="fitXY" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_title"
@@ -37,11 +39,12 @@
                 android:ellipsize="end"
                 android:gravity="center_horizontal"
                 android:lines="1"
-                android:textSize="18sp"
                 android:minWidth="200dp"
                 android:padding="5dp"
                 android:text=""
-                android:textColor="#fff" />
+                android:textColor="#fff"
+                android:textSize="18sp"
+                android:visibility="gone" />
         </RelativeLayout>
 
     </RelativeLayout>
