#25 Renderscript Update  - Update readme.md  - UiThread change

--- a/app-kotlin/src/main/res/layout/view_blur.xml
+++ b/app-kotlin/src/main/res/layout/view_blur.xml
@@ -25,9 +25,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:background="@drawable/sample_02"
                 android:minHeight="300dp"
                 android:minWidth="200dp"
+                android:scaleType="fitXY"
                 android:visibility="gone" />
 
             <TextView
