42 Update Glide sample

--- a/imageloadsample/src/main/res/menu/main_menu.xml
+++ b/imageloadsample/src/main/res/menu/main_menu.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="tech.thdev.kotlin_udemy_sample.MainActivity">
 
-    <item android:id="@+id/action_reload"
+    <item
+        android:id="@+id/action_reload"
         android:icon="@drawable/ic_refresh_black_24dp"
-        android:title="reload" />
+        android:title="reload"
+        app:showAsAction="ifRoom" />
 
     <group
         android:id="@+id/image_load_check_group"
