--- a/app/src/main/res/layout/item_image_view.xml
+++ b/app/src/main/res/layout/item_image_view.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="ImageName" />
 
-    <tech.thdev.app.view.custom.GlideImageLoadImageView
+    <tech.thdev.app.view.custom.GlideImageView
         android:id="@+id/img_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
