--- a/app-kotlin/src/main/res/layout/fragment_image_sample.xml
+++ b/app-kotlin/src/main/res/layout/fragment_image_sample.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:text="Item delete" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_two"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
