--- a/app-kotlin/src/main/res/layout/bottom_sheet_detail_view.xml
+++ b/app-kotlin/src/main/res/layout/bottom_sheet_detail_view.xml
@@ -123,8 +123,7 @@
             </RelativeLayout>
         </RelativeLayout>
 
-
-        <android.support.v4.widget.NestedScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/rl_etc_view">
@@ -137,6 +136,6 @@
                 android:text=""
                 android:textColor="#FFF"
                 android:textSize="15sp" />
-        </android.support.v4.widget.NestedScrollView>
+        </androidx.core.widget.NestedScrollView>
     </RelativeLayout>
 </RelativeLayout>
