--- a/sample_02_bottomsheet/src/main/res/values/colors.xml
+++ b/sample_02_bottomsheet/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#78909C</color>
-    <color name="colorPrimaryDark">#455A64</color>
-    <color name="colorAccent">#039BE5</color>
+    <color name="purple200">#BB86FC</color>
+    <color name="purple500">#6200EE</color>
+    <color name="purple700">#3700B3</color>
+    <color name="teal200">#03DAC5</color>
 
     <color name="bottom_body">#CFD8DC</color>
 </resources>
